--- a/package.json
+++ b/package.json
@@ -34,9 +34,9 @@
     "@progress/kendo-data-query": "^1.5.0",
     "@progress/kendo-drawing": "^1.5.7",
     "@progress/kendo-theme-default": "latest",
-    "bootstrap": "^4.2.1",
+    "bootstrap": ">=4.3.1",
     "core-js": "^2.6.2",
-    "jquery": "^3.3.1",
+    "jquery": ">=3.4.0",
     "kinvey-angular-sdk": "^3.12.3",
     "kinvey-angular2-sdk": "^3.12.3",
     "ng2-bootstrap": "^1.6.3",
